--- a/Examples/Invariant-mass-histogram.ipynb
+++ b/Examples/Invariant-mass-histogram.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "Invariant mass $M$ is a value that can be calculated from the results of measurements of the CMS detector. Invariant mass is a mathematical concept, not a physical mass.\n",
     "\n",
-    "For example let's take a situation where a particle A decays to two particles B and C. The invariant mass of the two particles B and C is determined by the equation\n",
+    "For example let's take a situation where a particle decays to two particles $p_1$ and $p_2$. The invariant mass of the two particles 1 and 2 is determined by the equation\n",
     "\n",
     "$$ M = \\sqrt{(E_1 + E_2)^2-(\\vec{p_1} + \\vec{p_2})^2}, $$\n",
     "\n",
